<resources>
    <string name="app_name">EatsNest</string>
    <string name="key_features">Key Features</string>
    <string name="contactless_ordering">Contactless Ordering</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="user_name">User name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="back">Back</string>
    <string name="enter">Enter</string>
    <string name="enter_your_delivery_address">Enter your delivery address</string>
    <string name="delivery_address">Delivery address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="email">Email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="personalized_recommendations">Personalized Recommendations</string>
    <string name="real_time_order_tracking">Real Time Order Tracking</string>
    <string name="your_ultimate_food_ordering_experience">Your Ultimate Food Ordering Experience</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_eatsnest">Welcome to EatsNest</string>
    <string name="enter_your_name2">Enter Your Name</string>
    <string name="user_name2">User Name</string>
    <string name="back2">Back</string>
    <string name="enter_your_password2">Enter Your Password</string>
    <string name="enter2">Enter</string>
    <string name="password2">Password</string>
    <string name="confirm">Confirm</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="billing_address">Billing Address</string>
    <string name="email_address">Email Address</string>
    <string name="amount">Amount</string>
    <string name="payment_details">Payment Details</string>
    <string name="hello_admin">Hello Admin!</string>
    <string name="insert_product">Insert Product</string>
    <string name="view_product_nupdate_product_ndeleteproduct">View Product\nUpdate product\nDeleteProduct</string>
    <string name="delete_product">Delete Product</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="to_delete_search_a_product_by_name">To Delete search a product by name</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="select_image">Select Image</string>
    <string name="insert_product2">Insert Product</string>
    <string name="back3">Back</string>
    <string name="todo5">TODO</string>
    <string name="amount4">Amount</string>
    <string name="card_number2">Card Number</string>
    <string name="cvv2">CVV</string>
    <string name="expiry_date_mm_yy">Expiry Date (MM/YY)</string>
    <string name="submit_payment">Submit Payment</string>
    <string name="already_have_an_account2">already_have_an_account?</string>
    <string name="already_have_an_account3">already have an account?</string>
    <string name="welcome_back_valued_user_n_we_re_glad_to_see_you_again">Welcome back, valued user!\n We\'re glad to see you again.</string>
    <string name="sign_up">Sign Up</string>
    <string name="admin">ADMIN</string>
    <string name="user">User</string>
    <string name="title_activity_location_services">LocationServicesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="request_emergency_assistance">Request Emergency Assistance</string>
    <string name="send_emergency_request">Send Emergency Request</string>
    <string name="enter_your_name1">Enter your name</string>
    <string name="click_the_button_to_check_your_order_status">Click the button to check your order status</string>
    <string name="check_order_status">Check Order Status</string>
    <string name="place_order">Place Order</string>
    <string name="product_name2">Product Name</string>
    <string name="product_price2">Product Price</string>
    <string name="product_quantity2">Product Quantity</string>
    <string name="welcome_to_payment_section">Welcome to Payment Section</string>
    <string name="personalized_recommendations2">Personalized Recommendations</string>
    <string name="chicken">Chicken</string>
    <string name="product_name3">Product Name</string>
    <string name="product_price3">Product Price</string>
    <string name="product_quantity3">Product Quantity</string>
    <string name="submit_review">Submit Review</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="welcome_to_hotel_dreamland">Welcome to Hotel DreamLand</string>
    <string name="write_your_review">Write your review</string>
    <string name="search2">Search</string>
    <string name="select_image2">Select Image</string>
    <string name="update_product">Update Product</string>
    <string name="product_name4">Product Name</string>
    <string name="product_price4">Product Price</string>
    <string name="product_quantity4">Product Quantity</string>
    <string name="to_update_search_a_product_by_name">To update search a product by name</string>
    <string name="todo4">TODO</string>
    <string name="product_id2">Product ID</string>
    <string name="press_the_button_below_to_go_to_your_desired_place">Press the button below to go to your desired place</string>
    <string name="emergency_assistance">Emergency Assistance</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="personalized_recommendations3">Personalized Recommendations</string>
    <string name="product_display">Product Display</string>
    <string name="payment">Payment</string>
    <string name="review">Review</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

</resources>