<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D1F3D1"
    tools:context=".MainActivity"
    android:padding="8dp">

    <TextView
        android:id="@+id/welcomeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"
        android:text="@string/welcome_to_eatsnest"
        android:textColor="#5A1C89"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/subtitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/your_ultimate_food_ordering_experience"
        android:textSize="16sp"
        android:textColor="#12032B"
        android:gravity="center"
        android:fontFamily="sans-serif-light" />

    <LinearLayout
        android:id="@+id/features"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_features"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/realTimeOrderTrackingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_time_order_tracking"
            android:textSize="14sp"
            android:textColor="#333333"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/personalizedRecommendationsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalized_recommendations"
            android:textSize="14sp"
            android:textColor="#333333"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/contactlessOrderingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactless_ordering"
            android:textSize="14sp"
            android:textColor="#333333"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="446dp"
                android:layout_height="319dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/img1"
                tools:ignore="ImageContrastCheck,VisualLintBounds" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#FF5722"
        android:padding="12dp"
        android:text="@string/get_started"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/loginPrompt"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/already_have_an_account3"
        android:textColor="#333333"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FF5722"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />

</LinearLayout>
