<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ReviewActivity"
    android:gravity="center_horizontal"
    android:background="#804AC399">

    <TextView
        android:id="@+id/textViewRestaurantName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/shape1"
        android:gravity="center"
        android:text="@string/welcome_to_hotel_dreamland"
        android:textColor="#FFF59D"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewWriteReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape2"
        android:gravity="center"
        android:text="@string/write_your_review"
        android:textColor="#FF5722"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_box"
        android:hint="@string/write_your_review_here"
        android:textColorHint="#546E7A"
        tools:ignore="TextContrastCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:stepSize="0.25"
        android:numStars="5"
        android:rating="0"
        android:layout_gravity="center"
        android:isIndicator="false"
        android:background="@drawable/shape3"
        android:progressTint="#FAE002"/>

    <Button
        android:id="@+id/buttonSubmitReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_review"
        android:layout_marginTop="200dp"
        android:backgroundTint="#B5E60808"
        tools:ignore="VisualLintButtonSize" />
    <Button
        android:id="@+id/btn_back11"
        style="@style/MyButtonStyle"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:text="@string/back"
        tools:ignore="InefficientWeight,TextContrastCheck" />

</LinearLayout>
