<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="40dp"
    android:paddingBottom="8dp"
    android:background="#B72196F3"
    android:padding="16dp"
    tools:context=".Payment">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape3"
        android:gravity="center"
        android:text="@string/welcome_to_payment_section"
        android:textColor="#F5FF5722"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <!-- Card Number -->
    <EditText
        android:id="@+id/cardNumber"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_box"
        android:drawablePadding="8dp"
        android:hint="@string/card_number2"
        android:inputType="number"
        android:minHeight="40dp"
        android:paddingTop="8dp"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Expiry Date -->
    <EditText
        android:id="@+id/expiryDate"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_box"
        android:drawablePadding="8dp"
        android:hint="@string/expiry_date_mm_yy"
        android:inputType="text"
        android:minHeight="40dp"
        android:paddingTop="8dp"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <!-- CVV -->
    <EditText
        android:id="@+id/cvv"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_box"
        android:drawablePadding="8dp"
        android:hint="@string/cvv2"
        android:inputType="numberPassword"
        android:minHeight="40dp"
        android:paddingTop="8dp"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    <!-- Amount -->
    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_box"
        android:drawablePadding="8dp"
        android:hint="@string/amount4"
        android:inputType="numberDecimal"
        android:minHeight="40dp"
        android:paddingTop="8dp"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    <!-- Submit Payment Button -->
    <Button
        android:id="@+id/submitPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:backgroundTint="#E91E63"
        android:text="@string/submit_payment"
        android:textColor="#8BC34A"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <!-- Back Button -->
    <Button
        android:id="@+id/BTN_Back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#E91E63"
        android:minHeight="48dp"
        android:text="@string/back2"
        android:textColor="#8BC34A"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize,TextContrastCheck,TouchTargetSizeCheck" />
    <!-- Payment Result TextView -->
    <TextView
        android:id="@+id/paymentResult"
        android:layout_width="match_parent"
        android:textColor="#F10404"
        android:layout_height="wrap_content"
        android:paddingTop="16dp" />

</LinearLayout>
