<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints=""
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/adminpic3">

    <!-- Product Name EditText -->
    <EditText
        android:id="@+id/productNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/product_name2"
        android:inputType="text"
        android:minHeight="48dp"
        android:enabled="false"
        android:focusable="false"
        android:background="@drawable/edit_text_box"
        android:textColor="#FF5722"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Product Price EditText -->
    <EditText
        android:id="@+id/productPriceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/product_price2"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:enabled="false"
        android:focusable="false"
        android:background="@drawable/edit_text_box"
        android:textColor="#FF5722"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Product Quantity EditText -->
    <EditText
        android:id="@+id/productQuantityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_quantity2"
        android:inputType="number"
        android:minHeight="48dp"
        android:enabled="false"
        android:focusable="false"
        android:background="@drawable/edit_text_box"
        android:textColor="#FF5722"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <!-- Place Order Button -->
    <Button
        android:id="@+id/placeOrderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#03A9F4"
        android:padding="12dp"
        android:text="@string/place_order"
        android:textColor="@android:color/white"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    <Button
        android:id="@+id/btn_back8"
        style="@style/MyButtonStyle"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:text="@string/back"
        tools:ignore="InefficientWeight,TextContrastCheck" />

</LinearLayout>
