<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@android:color/holo_blue_light">

    <TextView
        android:id="@+id/orderStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape1"
        android:padding="16dp"
        android:text="@string/click_the_button_to_check_your_order_status"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/checkStatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:padding="16dp"
        android:text="@string/check_order_status"
        android:textColor="@android:color/white"
        tools:ignore="TextContrastCheck" />
    <Button
        android:id="@+id/btn_back9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:padding="16dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:text="@string/back"
        tools:ignore="InefficientWeight,TextContrastCheck" />

</LinearLayout>
